fidoconfig 0.9
--------------

----- cvs ci ------
Wed Sep 15 15:18:50 MET DST 1999
mtt:
* new example config

----- cvs ci ------
Wed Sep 15 15:18:50 MET DST 1999
mtt:
+ added sun makefiles
* dumpCfg puts address out now 

----- cvs ci ------
Sat Sep 11 13:00:16 NOVST 1999
max:
* added carbonReason token (patch from Serguei Revtov)
* described "-g <char>" if documentation
	
----- cvs ci ------
Fri Sep 10  11:05:00
sms:
+ added keyword sessionPwd

----- cvs ci ------
Thu Sep 02  16:25:00
Fedor:
* fixed type in fileLDescString

----- cvs ci ------
Wed Sep 01 22:06:21 CEST 1999
sms:
+ added the following keywords:

  ticOutbound
  semaDir
  badFilesDir
  areafixKillRequests
  filefixKillReports
  filefixKillRequests
  fileAreasLog
  fileNewAreasLog
  longNameList
  fileArcList
  filePassList
  fileDupeList
  msgidfile
  createDirs
  longDirNames
  splitDirs
  addDLC
  fileSingleDescLine
  fileCheckDest
  fileDescPos
  DLCDigits
  fileMaxDupeAge
  fileFileUMask
  fileDirUMask
  fileLocalPwd
  fileLDescString

----- cvs ci ------
Sun Aug 29 22:14:49 CEST 1999
sms:
+ added '#' to patmat()

----- cvs ci ------
Sat Aug 28 02:03:49 CEST 1999
Antonio:
+ added -b option for message base type.

----- cvs ci ------
Thu Aug 26  20:26:50
Fedor:
+ added AreaOption - Jam (adapted smapi for JAM). Need check and test.

----- cvs ci ------
Fri Aug 20 14:42:16 NOVST 1999
max:
+ added token areafixSplitStr
* changes in tparser (print all new tokens)
	
----- cvs ci ------
Mon Aug 16 12:33:46 NOVST 1999
max:
+ added echoarea token -manual. same as -mandatory.
+ added tokens beforePack & afterUnpack
* small changes in docmentation.

----- cvs ci ------
Sat Aug 14 23:34:49 NOVST 1999
max:
+ added token areafixmsgSize

----- cvs ci ------
Fri Aug 13 13:30:54 NOVST 1999
max:
+ added token carbonKeepSb
+ added token -keepsb in echoarea option
	
Thu Aug 12
sms:
+ some work on dump.c
+ added dumpfcfg (simply calls dumpConfig())

----- cvs ci ------
Wed Aug 11 02:20:37 NOVST 1999
max: